# SearchEngine

./: .gitignore  UML.md  pyproject.toml  structure.puml
src/: Loader.py  Preprocessor.py  __main__.py  app.py  benchmark.py  data_loader.py  dataset.py  inverted_index_builder.py  parse_args.py  preprocessor.py  search_engine.py
src/Test/: LoaderTest.py  PreprocessingTest.py
static/: styles.css
templates/: base.html  base.html.j2  doc.html  doc.html.j2  index.html  index.html.j2
test/: test_data_loader.py  test_loader.py  test_preprocessing.py
