[project]
name = "searchengine"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.3",
    "loguru>=0.7.3",
    "nltk>=3.9.4",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
]

[project.scripts]
search_engine = "__main__:main"
benchmark = "benchmark:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.9",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

